Configuracion Docker y variables de entorno para Render